manifests/workloads/deprecated/danmanners-dot-com/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: danmanners-dot-com
  name: danmanners-dot-com
