manifests/workloads/deprecated/danmanners-dot-com/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: danmanners-dot-com-web
  namespace: danmanners-dot-com
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`www.danmanners.com`)
      kind: Rule
      services:
        - name: danmanners-dot-com
          port: 80
      middlewares:
        - name: http-https-redirectscheme
          namespace: kube-system
    - match: Host(`danmanners.com`)
      kind: Rule
      services:
        - name: danmanners-dot-com
          port: 80
      middlewares:
        - name: http-https-redirectscheme
          namespace: kube-system
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: danmanners-dot-com-websecure
  namespace: danmanners-dot-com
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.danmanners.com`)
      kind: Rule
      services:
        - name: danmanners-dot-com
          port: 80
    - match: Host(`danmanners.com`)
      kind: Rule
      services:
        - name: danmanners-dot-com
          port: 80
  tls:
    secretName: danmanners-dot-com
